# Yacc-like-compilation-tool

./: .gitignore  README.md  makefile  编译和使用说明.md
genTable/: main.cpp
genWordAnalyzer/: GraghToCode.cpp
grammarAnalyzer/: main.cpp
grammarAnalyzer/analyzer/: analyzer.cpp  analyzer.h
grammarAnalyzer/gui/: CMakeLists.txt  CMakeLists.txt.user.895bda6  CMakeLists.txt.user.dbd37c8  editor.cpp  editor.h  editor.ui  globle.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tableforgragh.cpp  tableforgragh.h  tableforgragh.ui
grammarAnalyzer/tokens/: tokens.h
include/Error/: error.cpp  error.h  error.txt
include/File/: File.cpp  File.h
include/Gragh/: Gragh.cpp  Gragh.h  scanner.cpp  scanner.h
include/grammar/: IndexedSet.h  LALR1.cpp  LALR1.h  LR1.cpp  LR1.h  globle.cpp  globle.h  initGrammar.h
input/: DFA.gh  NFA.gh  miniDFA.gh  tempSRC.prm
input/adjust/: ignore.txt
input/mini-c/: fixTree.cpp  miniC.grm  miniC.minic  miniC.rul
input/mini-c/test/: assign.c  do-while.c  if-else.c  op.c  single-if.c  tokens.c  while.c
input/tiny/: fixTree.cpp  samply.tny  tiny.grm  tiny.rul
input/tiny/test/: assign.tny  if-else.tny  if.tny  op.tny  repeat-until.tny  tokens.tny
test/: 测试数据及结果.md
wordAnalyzer/: code.cpp  getInput.h
